@@ -1,0 +1,8 @@
+<property_sheet_list>
+ <portal_type id="File">
+  <item>SortIndex</item>
+ </portal_type>
+ <portal_type id="Image">
+  <item>SortIndex</item>
+ </portal_type>
+</property_sheet_list>
