@@ -1,4 +1,7 @@
 2008-10-14 yusei
+* Added SortIndex property sheet to Image and File.
+
+2008-10-14 yusei
 * Start to develop version 5.3.
 
 2008-10-03 yusei
